<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/pref1"
        android:key="music"
        android:summary="@string/pref1des" />
    <ListPreference
        android:defaultValue="1"
        android:title="@string/pref2"
        android:entries="@array/graficos"
        android:entryValues="@array/graficos"
        android:key="graficos"
        android:summary="@string/pref2des" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref3"
        android:key="edit_text_preference_1"
        android:summary="@string/pref3des" />
</PreferenceScreen>